--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li>
+            <img
+              id="modeToggle"
+              class="icon color-icon"
+              src="./assets/theme_light.png"
+              src-light="./assets/theme_light.png"
+              src-dark="./assets/theme_dark.png"
+              alt="Color them icon"
+            />
+          </li>
         </ul>
       </div>
     </nav>
@@ -33,6 +43,16 @@
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <li>
+            <img
+              id="modeToggle2"
+              class="icon color-icon"
+              src="./assets/theme_light.png"
+              src-light="./assets/theme_light.png"
+              src-dark="./assets/theme_dark.png"
+              alt="Color them icon"
+            />
+          </li>
         </div>
       </div>
     </nav>
@@ -60,15 +80,19 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="./assets/linkedin_light.png"
+            src-light="./assets/linkedin_light.png"
+            src-dark="./assets/linkedin_dark.png"
             alt="My LinkedIn profile"
-            class="icon"
+            class="icon linkedin-icon"
             onclick="location.href='https://www.linkedin.com/in/gaurav-singh10/'"
           />
           <img
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon"
+            src="./assets/github_light.png"
+            src-light="./assets/github_light.png"
+            src-dark="./assets/github_dark.png"
+            alt="My github profile"
+            class="icon github-icon"
             onclick="location.href='https://github.com/gaurav0045'"
           />
         </div>
@@ -89,7 +113,9 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="./assets/experience_light.png"
+                src-light="./assets/experience_light.png"
+                src-dark="./assets/experience_dark.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -98,12 +124,14 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="./assets/education_light.png"
+                src-light="./assets/education_light.png"
+                src-dark="./assets/education_dark.png"
                 alt="Education icon"
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Bachelor of technology<br />Information Technology</p>
+              <p>Bachelors of Technology<br />Information Technology</p>
             </div>
           </div>
           <div class="text-container">
@@ -121,7 +149,9 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./assets/arrow_light.png"
+        src-light="./assets/arrow_light.png"
+        src-dark="./assets/arrow_dark.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -137,7 +167,9 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -148,7 +180,9 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -159,7 +193,9 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -170,7 +206,9 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -181,7 +219,9 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -192,7 +232,9 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -208,7 +250,9 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -219,7 +263,9 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -230,7 +276,9 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -241,7 +289,9 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/checkmark_light.png"
+                  src-light="./assets/checkmark_light.png"
+                  src-dark="./assets/checkmark_dark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -255,7 +305,9 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./assets/arrow_light.png"
+        src-light="./assets/arrow_light.png"
+        src-dark="./assets/arrow_dark.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -341,7 +393,9 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./assets/arrow_light.png"
+        src-light="./assets/arrow_light.png"
+        src-dark="./assets/arrow_dark.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -353,7 +407,9 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="./assets/email_light.png"
+            src-light="./assets/email_light.png"
+            src-dark="./assets/email_dark.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -361,11 +417,14 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
-            alt="LinkedIn icon"
-            class="icon contact-icon"
+            src="./assets/linkedin_light.png"
+            src-light="./assets/linkedin_light.png"
+            src-dark="./assets/linkedin_dark.png"
+            alt="My LinkedIn profile"
+            class="icon linkedin-icon"
+            onclick="location.href='www.linkedin.com/in/gaurav-singh10/'"
           />
-          <p><a href="https://www.linkedin.com/in/gaurav-singh10/">LinkedIn</a></p>
+          <p><a href="www.linkedin.com/in/gaurav-singh10">LinkedIn</a></p>
         </div>
       </div>
     </section>
