--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
             src-dark="./assets/linkedin_dark.png"
             alt="My LinkedIn profile"
             class="icon linkedin-icon"
-            onclick="location.href='www.linkedin.com/in/gaurav-singh10/'"
+            onclick="location.href='https://www.linkedin.com/in/gaurav-singh10/'"
           />
-          <p><a href="www.linkedin.com/in/gaurav-singh10">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/gaurav-singh10/">LinkedIn</a></p>
         </div>
       </div>
     </section>
