--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/Travelcoop.jpg"
                 alt="Project 1"
                 class="project-img"
               />
@@ -330,13 +330,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/gaurav0045/travel-landing-page.git'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://travelscoop.netlify.app/'"
               >
                 Live Demo
               </button>
