--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/RideHub.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -354,13 +354,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/gaurav0045/car_showcase.git'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://car-showcase-ten-blush.vercel.app/'"
               >
                 Live Demo
               </button>
